Modify logo size and trim unused assets

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -106,7 +106,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #F8F8F2;
+  background-color: $primary-invert;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
