Implement sticky footer

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -90,7 +90,7 @@ $family-sans-serif: 'Hind Siliguri', sans-serif
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
-  padding: 3rem 0rem 0rem
+  padding: 3rem 0rem
   background-color: transparent
 
 //Menu overrides
@@ -139,3 +139,11 @@ $menu-label-color: $white-ter
 
 h1, h2, h3, h4, h5, h6 
   font-family: 'Nunito', sans-serif
+
+.template-wrapper
+  display: flex
+  min-height: 100vh
+  flex-direction: column
+
+  .template-content
+    flex-grow: 1
