--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -59,6 +59,15 @@ $family-sans-serif: 'Hind Siliguri', sans-serif
     justify-content: center
     align-items: center
 
+.full-page-image
+    width: 100vw
+    height: 100vh
+    background-size: cover
+    background-position: bottom
+    display: flex
+    justify-content: center
+    align-items: center
+
 .btn
     display: inline-block
     padding: 12px 16px 10px
