Create transparent heading background color

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -68,6 +68,11 @@ $family-sans-serif: 'Hind Siliguri', sans-serif
     justify-content: center
     align-items: center
 
+.jumbotron-heading
+  background-color: transparentize(#0757A5, 0.1)
+  color: white
+  padding: 1rem
+
 .btn
     display: inline-block
     padding: 12px 16px 10px
