--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -69,7 +69,7 @@ $family-sans-serif: 'Hind Siliguri', sans-serif
     align-items: center
 
 .jumbotron-heading
-  background-color: transparentize($primary, 0.1)
+  background-color: none
   color: white
   padding: 1rem
 
