Update imagery per client request

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -7,13 +7,13 @@
 // Avadata logo brand color: #FD461E
 // Avadata Palette: 131A21, 162B5B, 0757A5, 3F90D5, ECEDDC
 // https://coolors.co/131a21-162b5b-0757a5-3f90d5-eceddc
-$avadata-blue: #0757A5
+$avadata-blue: #02457A
 $avadata-blue-invert: #F8F8F2
 
 $primary: $avadata-blue
 $primary-invert: $avadata-blue-invert
 $body-color: #162B5B
-$black: #161F27
+$black: #001B48
 
 // font overrides
 $family-sans-serif: 'Hind Siliguri', sans-serif
