Update navbar and icon per client request

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -109,8 +109,13 @@ $family-sans-serif: 'Hind Siliguri', sans-serif
   height: 1.5rem
   fill: currentColor
 
+// Navbar height override
+$navbar-height: 4.5rem
+$navbar-item-img-max-height: 3rem
+
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
+
 footer.footer
   padding: 3rem 0rem
   background-color: transparent
